[#561][#336] Add credit - fixed pricing page spacing

--- a/code/wp-content/themes/Akvo-responsive/css/library.scss
+++ b/code/wp-content/themes/Akvo-responsive/css/library.scss
@@ -112,7 +112,7 @@ $width-huge: 1400px;
   @else if $width == wide-screens {
     @media only screen and (min-width: $width-large) { @content; }
   }
-  @else if $width == medium-screens {
+  @else if $width == mediums-screens {
     @media only screen and (min-width: $width-medium) {@content; }
   }
   @else if $width == small-screens {
@@ -121,7 +121,7 @@ $width-huge: 1400px;
   @else if $width == wide-max-screens {
     @media only screen and (max-width: $width-large) { @content; }
   }
-  @else if $width == medium-max-screens {
+  @else if $width == mediums-max-screens {
     @media only screen and (max-width: $width-medium) { @content; }
   }
   @else if $width == small-max-screens {
